# manga_reader

./: .gitignore  AUTHORS  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: CI.yml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
.postman/: api
services/api/v1/: Cargo.toml  Dockerfile  checks.json
services/api/v1/src/: main.rs  middlewares.rs  services.rs
services/api/v1/src/adapters/: mysql.rs
services/api/v1/src/cache/: mod.rs  redis_cache.rs
services/api/v1/src/handlers/: mod.rs
services/api/v1/src/models/: app_data.rs  manga.rs  mod.rs  user.rs
services/api/v1/src/services/: manga.rs  mod.rs  user.rs
services/app/: Dockerfile  firebase.json  jest.config.ts  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
services/app/src/: App.tsx  firebase.ts  index.css  main.tsx  router.tsx
services/app/src/__mocks__/: axios.ts
services/app/src/app/: store.ts
services/app/src/components/: Carousel.tsx  ContextualMenu.tsx  CountViewer.tsx  Debug.tsx  FeaturedMangas.tsx  Header.tsx  HelpBox.tsx  InputTag.tsx  Manga.tsx  MangaFetch.tsx  MangaPage.tsx  Profile.tsx  Row.tsx  Searchbar.tsx  (+8 more)
services/db/: init.sql
services/manga-reader-webapp/: Dockerfile  babel.config.js  firebase.config.js  jest.config.js  package-lock.json  package.json
services/manga-reader-webapp/__mocks__/: svgTransform.js
services/manga-reader-webapp/src/: App.css  App.js  App.jsx  firebase.js  index.jsx
src/manga-reader-webapp/: Dockerfile  package-lock.json  package.json
src/manga-reader-webapp/src/: App.js
(+34 files in other folders)
