[package]
name = "v1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4"
ctrlc = "3.2.5"
dotenv = "0.15.0"
env_logger = "0.9.0"
futures-util = "0.3.26"
http = "0.2.9"
log = "0.4.14"
redis = "0.22.0"
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
uuid = { version = "1.3.0", features = ["serde", "v4"] }